// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Highlight parses an highlighted attribute of hit object 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlight renders a hit with a custom className 1`] = `
<span
  className="ais-Highlight MyCustomHighlight"
>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <em
    className="ais-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <em
    className="ais-Highlight-highlighted"
  >
    hi
  </em>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;

exports[`Highlight renders a hit with a custom tag correctly 1`] = `
<span
  className="ais-Highlight"
>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    awesome 
  </span>
  <marquee
    className="ais-Highlight-highlighted"
  >
    hi
  </marquee>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    ghlighted 
  </span>
  <marquee
    className="ais-Highlight-highlighted"
  >
    hi
  </marquee>
  <span
    className="ais-Highlight-nonHighlighted"
  >
    t!
  </span>
</span>
`;
